--- a/public/src/login/style.css
+++ b/public/src/login/style.css
@@ -24,6 +24,13 @@
     gap: 5px;
     padding: 20px;
 }
+fieldset{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 30px;
+    gap: 10px;
+}
 .material-symbols-outlined{
     transform: scale(30px);
 }
