--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/public/stylesheets/login/style.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Document</title>
@@ -34,6 +34,6 @@
         </div>
     </center>
 </body>
-<script type="module" src="script.js"></script>
+<script type="module" src="/public/scripts/login/script.js"></script>
 
 </html>
