--- a/views/Home/home.ejs
+++ b/views/Home/home.ejs
@@ -19,7 +19,7 @@
       <h1>Grievance</h1>
 
       <div class="links">
-        <a href="http://localhost:3000/categories" class="grieveance">grieveance category</i></a>
+        <a href="https://testbackend-5s7o.onrender.com/categories" class="grieveance">grieveance category</i></a>
 
         <% if(userStatus){ %>
           <a href="/api/logout" class="loginBtn"> Logout</a>
