web site deploye but it has some problem with mongoos

--- a/views/Home/home.ejs
+++ b/views/Home/home.ejs
@@ -22,9 +22,9 @@
         <a href="https://testbackend-5s7o.onrender.com/categories" class="grieveance">grieveance category</i></a>
 
         <% if(userStatus){ %>
-          <a href="/api/logout" class="loginBtn"> Logout</a>
+          <a href="https://testbackend-5s7o.onrender.com//api/logout" class="loginBtn"> Logout</a>
           <% }else{ %>
-            <a href="/login"class="loginBtn" > Login</a>
+            <a href="https://testbackend-5s7o.onrender.com//login"class="loginBtn" > Login</a>
             <% } %>
       </div>
 
