changing mongoose version 7.6 to 6.10.1

--- a/views/ComplaintsForm/comp-faculty.ejs
+++ b/views/ComplaintsForm/comp-faculty.ejs
@@ -17,7 +17,7 @@
     <div id="root">
         <center>
             <div id="box">
-                <form action="http://localhost:3000/api/complaint" method="post">
+                <form action="<%= URL%>/api/complaint" method="post">
                     <div>
                         NAME : <input type="text" name="name" width="200px" class="name" required>
                         MOBILE NO : <input type="number" name="contact" required maxlength="10" minlength="10">
