--- a/views/GrevCategories/categories.ejs
+++ b/views/GrevCategories/categories.ejs
@@ -12,55 +12,55 @@
     <center>
         <h1 class="head1"> GRIEVANCE CATAGORY </h1>
         <marquee scrollamount="20" bgcolor="yellow" diriction="left" height="80px" width="80%" hspace="100px"
-            vspace="100px">
+            vspace="100px">render
             <h1> SELECT ANY ONE </h1>
         </marquee>
     </center>
     <div class="display">
 
-        <a class="cards" href="http://localhost:3000/comp_faculty">
+        <a class="cards" href="<%= URL%>/comp_faculty">
             <img src="/Assets/Categories/academic.jpg" alt="">
             <div class="overlay">
                 <h1>Academic</h1>
             </div>
         </a>
 
-        <a class="cards" href="http://localhost:3000/comp_faculty">
+        <a class="cards" href="<%= URL%>/comp_faculty">
             <img src="/Assets/Categories/account.jpg" alt="">
             <div class="overlay">
                 <h1>Account</h1>
             </div>
         </a>
 
-        <a class="cards" href="http://localhost:3000/comp_faculty">
+        <a class="cards" href="<%= URL%>/comp_faculty">
             <img src="/Assets/Categories/attandence.jpg" alt="">
             <div class="overlay">
                 <h1>Attendence</h1>
             </div>
         </a>
 
-        <a class="cards" href="http://localhost:3000/comp_faculty">
+        <a class="cards" href="<%= URL%>/comp_faculty">
             <img src="/Assets/Categories/canteen.jpg" alt="">
             <div class="overlay">
                 <h1>canteen</h1>
             </div>
         </a>
 
-        <a class="cards" href="http://localhost:3000/comp_faculty">
+        <a class="cards" href="<%= URL%>/comp_faculty">
             <img src="/Assets/Categories/lybrary.jpg" alt="">
             <div class="overlay">
                 <h1>lybrary</h1>
             </div>
         </a>
 
-        <a class="cards" id="trnas_card" href="http://localhost:3000/comp_faculty">
+        <a class="cards" id="trnas_card" href="<%= URL%>/comp_faculty">
             <img src="/Assets/Categories/transportation.jpg" alt="">
             <div class="overlay">
                 <h1>Transportation</h1>
             </div>
         </a>
 
-        <a class="cards" href="http://localhost:3000/comp_faculty">
+        <a class="cards" href="<%= URL%>/comp_faculty">
             <img src="/Assets/Categories/others.jpg" alt="">
             <div class="overlay">
                 <h1>Others</h1>
