--- a/views/Home/home.ejs
+++ b/views/Home/home.ejs
@@ -19,19 +19,19 @@
       <h1>Grievance</h1>
 
       <div class="links">
-        <a href="https://testbackend-5s7o.onrender.com/categories" class="grieveance">grieveance category</i></a>
+        <a href="<%= URL%>/categories" class="grieveance">grieveance category</i></a>
 
         <% if(userStatus){ %>
-          <a href="https://testbackend-5s7o.onrender.com//api/logout" class="loginBtn"> Logout</a>
+          <a href="<%= URL%>/api/logout" class="loginBtn"> Logout</a>
           <% }else{ %>
-            <a href="https://testbackend-5s7o.onrender.com//login"class="loginBtn" > Login</a>
+            <a href="<%= URL%>/login"class="loginBtn" > Login</a>
             <% } %>
       </div>
 
     </nav>
   </header>
   <main>
-    <a href="http://localhost:3000/categories" class="card"><img src="/Assets/Home/img-2.jpg" alt=""></a>
+    <a href="<%= URL%>/categories" class="card"><img src="/Assets/Home/img-2.jpg" alt=""></a>
     <a href="#" class="card"><img src="/Assets/Home/img-1.jpg" alt=""></a>
   </main>
 </body>
