--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -24,7 +24,7 @@
                         <%= msg%>
                     </h1>
 
-                    <form action="http://localhost:3000/api/login" method="post" class="form">
+                    <form action="<%= URL%>/api/login" method="post" class="form">
                         <fieldset>
                             <legend>
                                 <span class="material-symbols-outlined">
